--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
+  <script src="https://kit.fontawesome.com/e5c7f27a7a.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Roboto:wght@300&display=swap"
+    rel="stylesheet">
   <title>
-    Change Me!
+    Bloggr
   </title>
 </head>
 
@@ -19,7 +22,7 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
-
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
